--- a/css/basic.css
+++ b/css/basic.css
@@ -96,3 +96,17 @@ button {
     font-size: 14px;
     transform: translate(0, -50%);
 }
+
+.youtube_case {
+    position: relative;
+    padding-bottom: 56.25%;
+}
+
+.youtube_case iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+}
