--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,11 @@
     outline: 1px solid tomato;
 } */
 
+body {
+    /* overflow-x: hidden; */
+    word-break: keep-all;
+}
+
 .top_banner {
     height: 116px;
     overflow: hidden;
@@ -42,6 +47,37 @@
     font-size: 20px;
 }
 
+@media (max-width:768px) {
+    .top_banner {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        z-index: 999;
+        transform: translate(-50%, -50%);
+
+        width: calc(100% - 30px);
+        height: auto;
+        padding: 0 30px;
+        transition: 0.5s;
+
+        line-height: 1.3;
+    }
+
+    .top_banner a {
+        display: block;
+        margin: 20px 0 0 0;
+        text-align: center;
+    }
+
+    .top_banner i {
+        top: 0;
+        right: -30px;
+        padding: 10px;
+        background: #444;
+        color: #fff;
+    }
+}
+
 .header h1 {
     font-size: 0;
 }
@@ -73,6 +109,81 @@
     background: #666;
 }
 
+@media (max-width:768px) {
+    .header h1 {
+        position: relative;
+        z-index: 9999;
+    }
+
+    .header.on h1 {
+        position: fixed;
+    }
+
+    .header .gnb {
+        position: relative;
+        z-index: 9998;
+        margin: 0 0 0 0;
+    }
+
+    .header .gnb::before {
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 9999;
+
+        width: 100vw;
+        height: 100vh;
+        background: rgba(0, 0, 0, 0.8);
+
+        display: none;
+    }
+
+    .header.on .gnb::before {
+        display: block;
+    }
+
+    .header .gnb>ul {
+        flex-direction: column;
+
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: calc(100% - 90px);
+        height: 100%;
+        background: #fff;
+        border-right: 1px solid #ddd;
+
+        padding: 150px 15px 0 15px;
+        z-index: 9999;
+    }
+
+    .header.on .gnb>ul {
+        left: 0;
+    }
+
+    .header .gnb>ul>li>a {
+        display: block;
+        padding: 0 0;
+        line-height: 40px;
+        border-bottom: 1px solid #ddd;
+    }
+
+    .header .gnb>ul>li~li::before {
+        display: none;
+    }
+
+    .header .inner .m_open {
+        position: fixed;
+        top: 45px;
+        right: 30px;
+        z-index: 9999;
+
+        display: block;
+        line-height: 1;
+    }
+}
+
 .header .search input {
     outline: none;
     border: none;
@@ -100,6 +211,11 @@
     font-size: 30px;
     line-height: 1;
 }
+
+.header .m_open {
+    display: none;
+}
+
 
 /* mainVisual */
 
@@ -288,6 +404,45 @@
     transition: 0.5s;
 }
 
+@media (max-width:768px) {
+    .mainVisual .main_slide_arrows button {
+        transform: translate(0, 0);
+    }
+
+    .mainVisual .main_slide_arrows button:first-child {
+        left: 15px;
+        margin: 0 0 0 0;
+    }
+
+    .mainVisual .main_slide_arrows button:last-child {
+        left: auto;
+        right: 15px;
+        margin: 0 0 0 0;
+    }
+
+
+    .mainVisual .main_slide_num {
+        position: absolute;
+        top: 100px;
+        left: auto;
+        right: 30px;
+
+        margin: 0 0 0 0;
+        transform: translate(0, 0);
+
+        color: #fff;
+        font-size: 20px;
+    }
+
+    .mainVisual .main_slide_play {
+        display: none;
+    }
+
+    .mainVisual .main_slide_pic {
+        display: none;
+    }
+}
+
 .mainEvent figure {
     text-align: center;
     border-radius: 50px 50px 0 0;
@@ -320,6 +475,18 @@
 
     margin: 0 50px;
     border-radius: 50px;
+}
+
+@media (max-width:768px) {
+    .mainBanner {
+        background: url(../img/mainvisual03.jpg) no-repeat scroll center center/cover;
+        text-align: center;
+        color: #fff;
+        filter: grayscale(1);
+
+        margin: 0 0;
+        border-radius: 0;
+    }
 }
 
 .mainBanner i {
@@ -359,6 +526,20 @@
     place-items: center; */
 }
 
+@media (max-width:768px) {
+    .mainPromotion .movie .label {
+        right: 0;
+    }
+
+    .mainPromotion .promotion_dec {
+        padding: 0 0 0 0;
+    }
+
+    .mainPromotion .tit {
+        padding: 0 0;
+    }
+}
+
 .mainPromotion .promotion_dec button {
     background: #ff6347;
     color: #fff;
@@ -374,6 +555,12 @@
 .mainYoutube .tit {
     width: auto;
     text-align: left;
+}
+
+@media (max-width:768px) {
+    .mainYoutube .tit {
+        padding: 0 0;
+    }
 }
 
 .mainYoutubeBg {
@@ -404,6 +591,13 @@
 .mainProduct figure {
     position: relative;
     margin: 0 15px;
+}
+
+@media (max-width:768px) {
+
+    .mainProduct figure {
+        margin: 0 0;
+    }
 }
 
 .mainProduct figure .case {
@@ -475,4 +669,100 @@
 
 .mainCustomer .main_tab_content>li.on {
     display: block;
+}
+
+.mainCustomer .main_tab_content .content li {
+    display: flex;
+    gap: 20px;
+    padding: 0 2px;
+    line-height: 40px;
+    border-bottom: 1px solid #ddd;
+}
+
+.mainCustomer .left {
+    overflow: hidden;
+}
+
+.mainCustomer .main_tab_content .content a {
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+/* footer */
+
+.footer {
+    background: #444;
+    color: #fff;
+    font-size: 15px;
+}
+
+.footer .top {
+    border-bottom: 1px solid #888;
+}
+
+.footer .inner {
+    display: flex;
+    justify-content: space-between;
+    line-height: 80px;
+}
+
+.footer .top ul {
+    display: flex;
+}
+
+.footer .top .lnk li~li::before {
+    content: "";
+    display: inline-block;
+    margin: 0 15px;
+    width: 1px;
+    height: 11px;
+    background: #888;
+}
+
+.footer .top .sns i {
+    font-size: 30px;
+    padding: 10px;
+    background: #222;
+    margin: 0 0 0 2px;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
+@media (max-width:768px) {
+    .footer .inner {
+        display: flex;
+        justify-content: space-between;
+        line-height: 30px;
+        text-align: center;
+    }
+
+    .footer .top ul {
+        flex-direction: column;
+    }
+
+    .footer .top .lnk li~li::before {
+        display: none;
+    }
+
+    .footer .top .sns {
+        flex-direction: row;
+        justify-content: center;
+        padding: 10px 0;
+    }
+}
+
+
+#f_link select {
+    background: transparent;
+    border: none;
+    outline: none;
+
+    padding: 5px 15px;
+    border: 1px solid #888;
+}
+
+#f_link option {
+    background: #333;
 }
