--- a/css/basic.css
+++ b/css/basic.css
@@ -227,3 +227,21 @@ button {
     width: 100%;
     height: 100%;
 }
+
+.to_top {
+    position: fixed;
+    bottom: 100px;
+    right: 100px;
+}
+
+.to_top button {
+    border: none;
+    outline: none;
+}
+
+.to_top i {
+    background: #ff6347;
+    color: #fff;
+    font-size: 30px;
+    padding: 10px;
+}
